--- a/Date Class Project Jaden White/Date Class Project Jaden White.vcxproj
+++ b/Date Class Project Jaden White/Date Class Project Jaden White.vcxproj
@@ -128,6 +128,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Date Class Project Jaden White.cpp" />
+    <ClCompile Include="Dates.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Dates.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
