--- a/Date Class Project Jaden White/Date Class Project Jaden White.vcxproj.filters
+++ b/Date Class Project Jaden White/Date Class Project Jaden White.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Date Class Project Jaden White.cpp">
+    <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Dates.cpp">
